# self-affine-curves

./: CMakeLists.txt  README.md  curve2.md  curveafter2.html  curvebefore2.html  tiny_curve2.h  tiny_html_driver.cpp  tiny_solver.cpp
